--- a/.gitconfig
+++ b/.gitconfig
@@ -13,9 +13,9 @@
 
 [user]
 	email = sebf.fischer@gmail.com
-	name = Sebastian Fischer
+	name = "Sebastian Fischer"
 [core]
-	editor = /home/sebi/nvim.appimage
+	editor = /home/sebi/appimages/nvim.appimage
 [init]
 	defaultBranch = main
 
