--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -29,3 +29,7 @@ map ctrl+shift+- change_font_size all -2.0
 # My Tokyo Day
 include current-theme.conf
 # END_KITTY_THEME
+font_family      JetBrains Mono Regular
+bold_font        JetBrains Mono Bold
+italic_font      JetBrains Mono Italic
+bold_italic_font JetBrains Mono Bold Italic
