--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -33,3 +33,6 @@ font_family      JetBrains Mono Regular
 bold_font        JetBrains Mono Bold
 italic_font      JetBrains Mono Italic
 bold_italic_font JetBrains Mono Bold Italic
+
+# https://github.com/helix-editor/helix/issues/2469
+macos_option_as_alt yes
