--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -1,4 +1,4 @@
-theme = "onedark"
+theme = "ingrid"
 
 [editor]
 line-number = "relative"
@@ -14,3 +14,10 @@ hidden = false
 
 [editor.lsp]
 display-inlay-hints = true
+display-messages = true
+
+[keys.insert]
+j = { j = "normal_mode" } # Maps `jk` to exit insert mode
+
+[editor.indent-guides]
+render = true
